Cambié la extensión de las imágenes a mayusculas

--- a/views/ejercicio1/lascoders.html
+++ b/views/ejercicio1/lascoders.html
@@ -10,29 +10,29 @@
     <hr>
     <div>
       <section>
-        <img src="assets/images/Erika-Gabriela.jpg" width="200px" alt="">
+        <img src="assets/images/Erika-Gabriela.JPG" width="200px" alt="">
         <p>Gaby</p>
       </section>
       <section>
-        <img src="assets/images/Viridiana-Montoya.jpg" width="200px"alt="">
+        <img src="assets/images/Viridiana-Montoya.JPG" width="200px"alt="">
         <p>Viri</p>
       </section>
       <section class="active">
-        <img src="assets/images/Erika-Salvador.jpg" width="200px"alt="">
+        <img src="assets/images/Erika-Salvador.JPG" width="200px"alt="">
         <p>Eri</p>
       </section>
     </div>
     <div>
       <section>
-        <img src="assets/images/Nancy-Santana.jpg" width="200px" alt="">
+        <img src="assets/images/Nancy-Santana.JPG" width="200px" alt="">
         <p>Nan</p>
       </section>
       <section>
-        <img src="assets/images/Rosa-Garcia.jpg" width="200px"alt="">
+        <img src="assets/images/Rosa-Garcia.JPG" width="200px"alt="">
         <p>Rosi</p>
       </section>
       <section class="active">
-        <img src="assets/images/Samahara-Fernandez.jpg" width="200px"alt="">
+        <img src="assets/images/Samahara-Fernandez.JPG" width="200px"alt="">
         <p>Sam</p>
       </section>
     </div>
