--- a/views/ejercicio2/applove.html
+++ b/views/ejercicio2/applove.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <nav class="container">
+      <nav>
       <div class="text-uppercase">
         <a>Services</a>
         <a>Work</a>
@@ -19,35 +19,42 @@
       </div>
       </nav>
     </header>
-    <section id="first_section" class="text-uppercase mb-0">
+
+    <section id="first_section" class="text-uppercase">
+      <img id="main_image" src="assets/images/bg-home.jpg" alt="home">
       <div>
-        <img src="assets/images/bg-home.jpg" alt="">
         <h2>you just found an untilmate</h2>
         <h1>We are applove from heart</h1>
         <p>handcrafted - modern design - pixel perfect - passioned design</p>
         <a>View services</a>
       </div>
     </section>
+
     <section id="second_section">
       <div>
-        <h2 class="text-uppercase">Services</h2>
-        <h4 id="size">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
-          magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
-        </h4>
-        <div>
+        <div id="size">
+          <h2 class="text-uppercase">Services</h2>
+          <h4>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
+            magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+          </h4>
+        </div>
+        <div class="fit">
+          <img src="assets/images/services-1.png" width="150px" alt="">
           <h5 class="text-uppercase">user interface design</h5>
           <h6>Wireframing</h6>
           <h6>Prototyping</h6>
           <h6>Usability testing</h6>
         </div>
-        <div>
+        <div class="fit">
+          <img src="assets/images/services-2.png" width="150px" alt="">
           <h5 class="text-uppercase">concept and ideas</h5>
           <h6>Conceptualization</h6>
           <h6>Digital Branding</h6>
           <h6>Product Strategy</h6>
         </div>
-        <div>
+        <div class="fit">
+          <img src="assets/images/services-3.png" width="150px" alt="">
           <h5 class="text-uppercase">desing and branding</h5>
           <h6>Interaction Design</h6>
           <h6>Graphic Design</h6>
@@ -55,15 +62,18 @@
         </div>
       </div>
     </section>
-    <section>
+
+    <section id="third_section">
       <div>
-        <h2>work</h2>
+        <h2 class="text-uppercase">work</h2>
         <h4>
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididuntut,<br>
           magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
         </h4>
+        <img src="assets/images/hero.png" width="60%"alt="">
       </div>
     </section>
+
     <footer>
       <p>&#169; Copyright</p>
     </footer>
